Attempted to fix the cramped movie search form bug

--- a/gui/src/app/components/movie-search/movie-search.component.css
+++ b/gui/src/app/components/movie-search/movie-search.component.css
@@ -91,6 +91,7 @@ button {
     width: 80%;
     margin: auto;
     clear: both;
+    min-width: 1200px;
 }
 
 .form-group {
